style for rock align; fix logic to handle clicking on the image, not border

--- a/src/components/Board1.css
+++ b/src/components/Board1.css
@@ -17,6 +17,7 @@
   height: 120px;
   border: 10px solid;
   border-radius: 50%;
+  margin: 0 auto;
 }
 
 .choice_icon img {
